# relwave-app

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  INSTALLATION.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  release.yml  test.yml
bridge/: .gitignore  docker-compose.test.yml  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
bridge/__tests__/: baselineMigration.test.ts  connectionBuilder.test.ts  databaseService.test.ts  dbStore.test.ts  discoveryService.test.ts  gitAdvancedHandlers.test.ts  gitHandlers.test.ts  gitService.test.ts  importProject.test.ts  monitoringHandlers.test.ts  monitoringWebSocketServer.test.ts  projectStore.test.ts  sshTunnelService.integration.test.ts  sshTunnelService.test.ts
bridge/scripts/: build-pkg.js  copy-native.js
bridge/src/: index.ts  jsonRpc.ts  jsonRpcHandler.ts  sessionManager.ts
bridge/test/: client.js
docs/: api.md  architecture.md  backend.md  checklist.md  features.md  roadmap.md
scripts/: bridge-dev.mjs  package-bridge.mjs
src/: App.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsi
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bridge/: commands.rs  mod.rs  process.rs
src/components/: BridgeLoader.tsx  ChartVisualization.tsx  DashboardContent.tsx  DataTable.tsx  DatabaseCard.tsx  ModeToggle.tsx  StatsOverview.tsx  header.tsx
src/dev/: DeveloperContextMenu.tsx
src/hooks/: useBridgeInit.ts  useBridgeQuery.ts  useCachedData.ts  (+13 more)
(+367 files in other folders)
