[package]
name = "relwave"
version = "0.4.0-beta.2"
description = "A powerful, cross-platform desktop application for database management with native Git version control."
authors = ["yashh56"]
edition = "2021"

[lib]
name = "relwave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.1", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "relwave"
path = "src/main.rs"
